Revision history for Perl module Dist-Zilla-PluginBundle-Author-DOHERTY

{{$NEXT}}

0.38      2014-08-27
  - Include intallation instructions
  - Munge POD before converting to README.mkdn
  - Bootstrap ourselves
  - Include github metadata [gh-5]

0.37      2013-08-07
  - Fix sharedir validation

0.36      2013-08-04
  - Support custom sharedir locations

0.35      2013-03-30
  - Bump Dist::Zilla version requirement for test_requires support
  - Require DZP::App::Command::cover

0.34      2013-03-02
  - Allow configuring max_target_perl for Test::MinimumVersion

0.33      2013-02-02
  - Replace makemaker/modulebuild settings with custom_build

0.32      2012-11-24
  - Check that we're on the right branch before releasing
  - Check that there are no fixup! or squash! commits
  - Require Git::Check 1.122460 - allow_dirty is once again an
    exact string match, but if your repo_root is not the dzil
    root, then the paths in allow_dirty are interpreted
    relative to the dzil root, instead of the repo_root [RT #78898]
  - Permit setting whether to include MB or EUMM tools

0.31      2012-07-29
  - Allow setting is_strict and has_version in Test::Version

0.30      2012-06-16
  - Add fork_is_authoritative to make GitHub::Meta point
    to your fork instead of the parent repo (ie in the
    case where you are the new maintainer)
  - Allow releasing to Google Code
  - Use DualBuilders to make Module::Build and ExtUtils::MakeMaker
    play nicer together
  - Totally revamp the internals
  - Allow --release-to, --fake-release, and --offline flags
  - Set NO_TEST=1 to skip TestRelease and CheckExtraTests

0.29      2012-06-14
  - Adjust the files that can be dirty for Git::Check

0.28      2012-06-14
  - Only do post-release stuff if it was a real release
  - Require @GitHub 0.22
    - bug related to finding a fork's parent repo
    - Now uses Config::Identity to get credentials

0.27      2012-05-25
  - Add SchwartzRatio plugin