@@ -1,6 +1,7 @@
 Revision history for Perl module Dist-Zilla-PluginBundle-Author-DOHERTY
 
 {{$NEXT}}
+  - Allow specifying which remote to get metadata from
 
 0.38      2014-08-27
   - Include intallation instructions
